--- a/css/main-style.css
+++ b/css/main-style.css
@@ -189,3 +189,12 @@
 	text-align: center
 }
 
+#feedback .avatar
+{
+	width: 100px; 
+	height: 100px;
+	border-radius: 50%;
+	
+	 
+	margin-bottom: 50px
+}
